deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: myspace
spec:
  selector:
    app: gs-app #должно соответствовать лейблу пода
  ports:
    - protocol: TCP
      name: web
      port: 8080 #порт сервиса
      targetPort: 8080 #порт пода (порт, который открыт для контейнера)
      # nodePort: 30181
    - protocol: TCP
      name: actuator
      port: 9099 #порт сервиса
      targetPort: 9090 #порт пода (порт, который открыт для контейнера)
  type: LoadBalancer # NodePort # ClusterIP
status:
  loadBalancer: {}
